added token for bootclasspath